--- a/FE_HW_2.ipynb
+++ b/FE_HW_2.ipynb
@@ -1416,7 +1416,7 @@
    "source": [
     "matplotlib.rcParams['figure.figsize'] = (10, 20)\n",
     "xgboost.plot_importance(booster=xgb)\n",
-    "plt.savefig('tree_importance_test1.png')"
+    "plt.savefig('tree_importance_test1.png')\n"
    ]
   },
   {
